--- a/src/components/Content.astro
+++ b/src/components/Content.astro
@@ -3,7 +3,7 @@
 ---
 
 <section class="h-full flex items-center">
-  <div class="space-y-6 text-gray-800 leading-relaxed">
+  <div class="space-y-6 leading-relaxed">
     <slot />
   </div>
 </section>
