--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -147,6 +147,10 @@
   transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 2.2);
 }
 
+.liquidGlass-wrapper:hover {
+  transform: scale(1.05);
+}
+
 .liquidGlass-effect {
   position: absolute;
   z-index: 0;
@@ -161,7 +165,7 @@
   z-index: 1;
   position: absolute;
   inset: 0;
-  background: rgba(255, 255, 255, 0.2);
+  background: rgba(0, 0, 0, 0.2);
 }
 
 .liquidGlass-shine {
@@ -169,8 +173,8 @@
   inset: 0;
   z-index: 2;
   overflow: hidden;
-  box-shadow: inset 2px 2px 1px 0 rgba(255, 255, 255, 0.5),
-    inset -1px -1px 1px 1px rgba(255, 255, 255, 0.5);
+  box-shadow: inset 2px 2px 1px 0 rgba(255, 255, 255, 0.2),
+    inset -1px -1px 1px 1px rgba(255, 255, 255, 0.2);
 }
 
 .liquidGlass-content {
