add resume info

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,9 @@
 
 <footer class="py-12">
   <!-- Copyright -->
-  <div class="border-t border-gray-700 mt-8 pt-8 text-center text-gray-400">
-    <p>&copy; {new Date().getFullYear()} Karen. All rights reserved.</p>
+  <div class="border-t border-gray-700 mt-8 text-gray-400">
+    <p class="ml-8 pt-8">
+      &copy; {new Date().getFullYear()} Karen. All rights reserved.
+    </p>
   </div>
 </footer>
