--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -14,10 +14,9 @@ const activeTextClasses = "text-white font-medium whitespace-nowrap";
 const activeIconClasses = "w-5 h-5 text-white";
 const inactiveIconClasses = "w-5 h-5 text-gray-200";
 
-const flowerIcon = `
+const medicalIcon = `
   <svg class="${isHomePage ? activeIconClasses : inactiveIconClasses}" viewBox="0 0 512 512" fill="currentColor">
-    <circle cx="256" cy="256" r="48"/>
-    <path d="M475.93,303.91a67.49,67.49,0,0,0-44.34-115.53,5.2,5.2,0,0,1-4.58-3.21h0a5.21,5.21,0,0,1,1-5.51A67.83,67.83,0,0,0,378,66.33h-.25A67.13,67.13,0,0,0,332.35,84a5.21,5.21,0,0,1-5.52,1h0a5.23,5.23,0,0,1-3.22-4.58,67.68,67.68,0,0,0-135.23,0A5.2,5.2,0,0,1,185.17,85h0a5.21,5.21,0,0,1-5.52-1,67.11,67.11,0,0,0-45.44-17.69H134A67.91,67.91,0,0,0,84,179.65a5.21,5.21,0,0,1,1,5.51h0a5.2,5.2,0,0,1-4.58,3.21,67.71,67.71,0,0,0,0,135.23A5.23,5.23,0,0,1,85,326.83h0a5.22,5.22,0,0,1-1,5.52,67.54,67.54,0,0,0,50.08,113h.25A67.38,67.38,0,0,0,179.65,428a5.21,5.21,0,0,1,5.51-1h0a5.2,5.2,0,0,1,3.21,4.58,67.71,67.71,0,0,0,135.23,0,5.23,5.23,0,0,1,3.22-4.58h0a5.21,5.21,0,0,1,5.51,1,67.38,67.38,0,0,0,45.29,17.42h.25a67.48,67.48,0,0,0,50.08-113,5.22,5.22,0,0,1-1-5.52h0a5.23,5.23,0,0,1,4.58-3.22A67.31,67.31,0,0,0,475.93,303.91ZM256,336a80,80,0,1,1,80-80A80.09,80.09,0,0,1,256,336Z"/>
+    <path d="M272,464H240a32,32,0,0,1-32-32l.05-85.82a4,4,0,0,0-6-3.47l-74.34,43.06a31.48,31.48,0,0,1-43-11.52L68.21,345.61l-.06-.1a31.65,31.65,0,0,1,11.56-42.8l74.61-43.25a4,4,0,0,0,0-6.92L79.78,209.33a31.41,31.41,0,0,1-11.55-43l16.44-28.55a31.48,31.48,0,0,1,19.27-14.74,31.14,31.14,0,0,1,23.8,3.2l74.31,43a4,4,0,0,0,6-3.47L208,80a32,32,0,0,1,32-32h32a32,32,0,0,1,32,32L304,165.72a4,4,0,0,0,6,3.47l74.34-43.06a31.51,31.51,0,0,1,43,11.52l16.49,28.64.06.09a31.52,31.52,0,0,1-11.64,42.86l-74.53,43.2a4,4,0,0,0,0,6.92l74.53,43.2a31.42,31.42,0,0,1,11.56,43l-16.44,28.55a31.48,31.48,0,0,1-19.27,14.74,31.14,31.14,0,0,1-23.8-3.2l-74.31-43a4,4,0,0,0-6,3.46L304,432A32,32,0,0,1,272,464ZM178.44,266.52h0Zm0-21h0Zm155.1-.08Zm0,0h0Z"/>
   </svg>
 `;
 
@@ -38,7 +37,7 @@ const flaskIcon = `
         isHomePage ? (
           <>
             <div class={activeContainerClasses}>
-              <Fragment set:html={flowerIcon} />
+              <Fragment set:html={medicalIcon} />
               <span class={activeTextClasses}>Sobre mí</span>
             </div>
             <a
@@ -52,7 +51,7 @@ const flaskIcon = `
         ) : isProjectsPage ? (
           <>
             <a href={homePath} class={commonLinkClasses} aria-label="Sobre mí">
-              <Fragment set:html={flowerIcon} />
+              <Fragment set:html={medicalIcon} />
             </a>
             <div class={activeContainerClasses}>
               <Fragment set:html={flaskIcon} />
@@ -62,7 +61,7 @@ const flaskIcon = `
         ) : (
           <>
             <a href={homePath} class={commonLinkClasses} aria-label="Sobre mí">
-              <Fragment set:html={flowerIcon} />
+              <Fragment set:html={medicalIcon} />
             </a>
             <a
               href={projectsPath}
