add lines between projects

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -124,12 +124,18 @@ const project6Content = `
               <Slider images={sliderImages} />
             </div>
 
+            <!-- Project Divider -->
+            <hr class="border-t border-gray-800 my-16" />
+
             <div class="space-y-8">
               <Content>
                 <div set:html={project2Content} />
               </Content>
               <Slider images={sliderImages} />
             </div>
+
+            <!-- Project Divider -->
+            <hr class="border-t border-gray-800 my-16" />
 
             <div class="space-y-8">
               <Content>
@@ -138,6 +144,9 @@ const project6Content = `
               <Slider images={sliderImages} />
             </div>
 
+            <!-- Project Divider -->
+            <hr class="border-t border-gray-800 my-16" />
+
             <div class="space-y-8">
               <Content>
                 <div set:html={project4Content} />
@@ -145,12 +154,18 @@ const project6Content = `
               <Slider images={sliderImages} />
             </div>
 
+            <!-- Project Divider -->
+            <hr class="border-t border-gray-800 my-16" />
+
             <div class="space-y-8">
               <Content>
                 <div set:html={project5Content} />
               </Content>
               <Slider images={sliderImages} />
             </div>
+
+            <!-- Project Divider -->
+            <hr class="border-t border-gray-800 my-16" />
 
             <div class="space-y-8">
               <Content>
