--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,11 +2,11 @@
 // No props needed for now
 ---
 
-<footer class="py-12">
+<footer class="pt-12 pb-4">
   <!-- Copyright -->
-  <div class="border-t border-gray-700 mt-8 text-gray-400">
-    <p class="ml-8 pt-8">
-      &copy; {new Date().getFullYear()} Karen. All rights reserved.
+  <div class="text-gray-400">
+    <p class="ml-8">
+      &copy; {new Date().getFullYear()} Arko MKT. All rights reserved.
     </p>
   </div>
 </footer>
