Change bg colour and navbar position

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -27,7 +27,7 @@ const flaskIcon = `
 `;
 ---
 
-<nav class="fixed bottom-8 left-1/2 transform -translate-x-1/2 z-50">
+<nav class="fixed top-4 left-1/2 transform -translate-x-1/2 z-50">
   <div class="liquidGlass-wrapper nav-glass p-2">
     <div class="liquidGlass-effect"></div>
     <div class="liquidGlass-tint"></div>
