--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,19 +6,14 @@ import Content from "../components/Content.astro";
 
 // Content for the left Info component
 const infoContent = `
-<h2>Karen Mejía.</h2>
-<h3>Diseñadora industrial multidisciplinaria</h3>
+<h2>Daniel Ortiz.</h2>
+<h3>Estudiante de<br>Comunicación y Periodismo.</h3>
 
 <div style="margin-top: 2rem;">
   <h4>Conecta</h4>
   <p>Ciudad de México<br>
-  56 2565 4482</p>
-</div>
-
-<div style="margin-top: 1.5rem;">
-  <h4>Social</h4>
-  <p>ig: @bykarenmo<br>
-  karenmo.mejia@gmail.com</p>
+  56 2565 4482<br>
+  danielortiz@gmail.com</p>
 </div>
 `;
 
@@ -131,7 +126,7 @@ const featuredProjects = [
 <Layout title="Karen Mejía - Diseñadora Industrial">
   <main>
     <!-- Hero Section -->
-    <section class="py-16 px-4">
+    <section class="py-24 px-4">
       <div class="max-w-6xl mx-auto px-4">
         <div
           class="grid grid-cols-1 lg:grid-cols-5 gap-12 lg:gap-16 min-h-[calc(100vh-160px)] lg:items-start"
