--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -21,17 +21,14 @@ import imgMuertos1 from "../assets/images/muertos1.jpeg";
 import imgMuertos2 from "../assets/images/muertos2.jpeg";
 
 const infoContent = `
-<h2>Karen Mejía.</h2>
-<h3>Diseñadora industrial multidisciplinaria</h3>
+<h2>Daniel Ortiz.</h2>
+<h3>Estudiante de<br>Comunicación y Periodismo.</h3>
+
 <div style="margin-top: 2rem;">
   <h4>Conecta</h4>
   <p>Ciudad de México<br>
-  56 2565 4482</p>
-</div>
-<div style="margin-top: 1.5rem;">
-  <h4>Social</h4>
-  <p>ig: @bykarenmo<br>
-  karenmo.mejia@gmail.com</p>
+  56 2565 4482<br>
+  danielortiz@gmail.com</p>
 </div>
 `;
 
@@ -77,7 +74,7 @@ const projects = [
 
 <Layout title="Proyectos | Karen Mejía">
   <main>
-    <section class="py-16 px-4">
+    <section class="py-24 px-4">
       <div class="max-w-6xl mx-auto px-4">
         <div
           class="grid grid-cols-1 lg:grid-cols-5 gap-12 lg:gap-16 lg:items-start"
