--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -11,11 +11,11 @@ import imgCarneAjena0 from "../assets/images/carne-ajena0.png";
 import imgCarneAjena1 from "../assets/images/carne-ajena1.png";
 import imgCatrinas0 from "../assets/images/catrinas1.png";
 import imgTatuaje0 from "../assets/images/tatuaje0.png";
-import imgDrag0 from "../assets/images/drag5.jpg";
-import imgDrag1 from "../assets/images/drag1.jpg";
-import imgDrag2 from "../assets/images/drag2.jpg";
-import imgDrag3 from "../assets/images/drag3.jpg";
-import imgDrag4 from "../assets/images/drag4.jpg";
+import imgDrag0 from "../assets/images/drag5.JPG";
+import imgDrag1 from "../assets/images/drag1.JPG";
+import imgDrag2 from "../assets/images/drag2.JPG";
+import imgDrag3 from "../assets/images/drag3.JPG";
+import imgDrag4 from "../assets/images/drag4.JPG";
 import imgMuertos0 from "../assets/images/muertos0.jpeg";
 import imgMuertos1 from "../assets/images/muertos1.jpeg";
 import imgMuertos2 from "../assets/images/muertos2.jpeg";
