--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -61,7 +61,7 @@ const projects = [
 ];
 ---
 
-<Layout title="Proyectos | Karen Mejía">
+<Layout title="Proyectos | Daniel Ortiz">
   <main>
     <section class="py-24 px-4">
       <div class="max-w-6xl mx-auto px-4">
